--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Asher/Documents/Programming/libs/jrpicam-1.1.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Asher/Pictures/Digital%20Design%20Tape%20Measure%20Photos/javadoc/javadoc.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Asher/Pictures/Digital Design Tape Measure Photos/examples/demo-view-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
