--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,15 @@
   	<artifactId>reflections</artifactId>
   	<version>0.9.11</version>
   </dependency>
+  <dependency>
+  	<groupId>org.pircbotx</groupId>
+  	<artifactId>pircbotx</artifactId>
+  	<version>2.1</version>
+  </dependency>
+  <dependency>
+  	<groupId>org.slf4j</groupId>
+  	<artifactId>slf4j-simple</artifactId>
+  	<version>1.7.25</version>
+  </dependency>
   </dependencies>
 </project>
